--- a/src/Pages/firstUser.html
+++ b/src/Pages/firstUser.html
@@ -16,6 +16,7 @@
     </style>
   </head>
   <body>
+    <h1>First User</h1>
     <ul id="messages"></ul>
     <div id="note"></div>
     <form id="form" class="hide">
@@ -39,7 +40,7 @@
   const joinRoom = document.getElementById('joinRoom');
   const typing = document.getElementById('typing');
   joinRoom.onclick = event => {
-      socket.emit('join_room', 'room:1');
+      socket.emit('join_room', 'room:1', 'firstUser');
       event.target.remove();
       form.classList.remove("hide");
   }
@@ -50,8 +51,8 @@
       console.log('Received Ping: ', data);
   });
 
-  socket.on('chat', function(msg){
-      $('#messages').append($('<li>').text(msg));
+  socket.on('chat', function(username, msg){
+    $('#messages').append($('<li>').html(`<b>${username}:</b> ${msg}`));
     });
   socket.on('connect', () => {
       console.log('connected')
@@ -75,7 +76,7 @@
 
   form.onsubmit = (event) => {
       event.preventDefault();
-      socket.emit('message', message.value);
+      socket.emit('message', 'room:1', message.value);
       message.value = '';
   }
 </script>
